syntax = "proto3";

package gateway;

option java_package = "ru.nms.diplom.searchgateway.service";
option java_multiple_files = true;

service SearchGatewayService {
  rpc search(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string query = 1;
  int32 k = 2;
  float shardLimitCoefficient = 3;
  bool isCoefficientAbsolute = 4;
}

message Document {
  int32 id = 1;
  float faissScore = 2;
  float luceneScore = 3;
}

message SearchResponse {
  repeated Document results = 1;
  Meta meta = 2;
}

message Meta {
  int32 adjustedK = 1;
  int32 amountOfReceivedDocs = 2;
}
